# incident_response_env-Meta_Hackathon-

./: .env.example  .gitignore  ACTION_PLAN.py  Dockerfile  Hackathon_Colab_Training.ipynb  README.md  README_HACKATHON.md  RUN_TRAINING_NOSSL.py  analyze_logs.py  check_hf_config.py  fix_unicode.py  hackathon_checklist.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_llm_only_hybrid.py  test_hf_api.py  test_hf_llm_inference.py  test_hf_models.py  test_llm_integration.py  test_rl_loop.py  unicode_report.txt
agents/: __init__.py  adversarial_agent.py  base_agent.py  chain_of_thought.py  fault_injector_agent.py  hybrid_router.py  message_bus.py  monitor_agent.py  progressive_memory.py  responder_agent.py
backend/: api.py  circuit_breaker.py  email_trigger.py  monitor.py
client/: __init__.py  http_client.py  websocket_client.py
data/: fetchData_minimal.sh
data/memory/: responder_ltm.json
data/processed/: alert_patterns.json  metric_baselines.json  service_topology.json
data/reports/: INC-20260425-145054-4382.json  (+27 more)
docs/: QUICK_REFERENCE.md  SETUP_AND_RUN_GUIDE.md  action_space.md  architecture.md  observation_space.md  scenarios.md
envs/: __init__.py  base_env.py  debate.py  incident_env.py  multi_agent_env.py
frontend/: dashboard.html  index.html
graders/: __init__.py  base_grader.py  easy_grader.py  expert_grader.py  hard_grader.py  medium_grader.py  positive_easy_grader.py  positive_medium_grader.py
models/: __init__.py  action.py  memory.py  observation.py  reward.py  state.py
scenarios/: __init__.py  base_scenario.py  scenario_generator.py
scripts/: capture_training_metrics.py  hackathon_execute.py  process_alibaba.py  test_e2e_pillars.py  test_full_inference.py  test_groq.py  validate_env.py
server/: app.py  environment.py  session_manager.py
tests/: test_email_pipeline.py  validate_new.py
training/: before_after_report.py  curriculum.py  evaluator.py  experiment_logger.py  grpo_trainer.py  llm_env_wrapper.py  train.py  train_grpo.py  train_rl_simple.py  train_rl_with_unsloth.py
(+65 files in other folders)
