[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "incident-response-env"
version = "1.0.0"
description = "OpenEnv environment for AI-powered incident response triage in production systems"
authors = [
    {name = "incident-response-env", email = "dev@incident-response-env.ai"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["openenv", "reinforcement-learning", "incident-response", "aiops", "sre"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.1",
    "websockets==12.0",
    "openai==1.30.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "python-multipart==0.0.9",
    "anyio==4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "black==24.4.2",
    "ruff==0.4.4",
    "mypy==1.10.0",
]

[project.scripts]
serve = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "models*",
    "scenarios*",
    "graders*",
    "envs*",
    "server*",
    "client*",
    "scripts*",
    "data*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true